Deixar o servidor configurável.

--- a/src/WinOpenID/appsettings.Development.json
+++ b/src/WinOpenID/appsettings.Development.json
@@ -5,5 +5,13 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Server": {
+    "AllowedHosts": [
+      "https://localhost/",
+      "https://intranet.mps.com.br/",
+      "https://oidcdebugger.com/",
+      "https://jwt.io"
+    ]
   }
 }
