Reorganizar o código de geração do token e de leitura da configuração.

--- a/src/WinOpenID/appsettings.Development.json
+++ b/src/WinOpenID/appsettings.Development.json
@@ -8,10 +8,12 @@
   },
   "Server": {
     "AllowedHosts": [
-      "https://localhost/",
+      "https://localhost",
       "https://intranet.mps.com.br/",
-      "https://oidcdebugger.com/",
+      "https://homolog.intranet.mps.com.br/",
+      "https://oidcdebugger.com/debug",
       "https://jwt.io"
-    ]
+    ],
+    "Domain":  "mps.interno"
   }
 }
