--- a/src/WinOpenID/WinOpenID.csproj
+++ b/src/WinOpenID/WinOpenID.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="System.DirectoryServices.AccountManagement" Version="4.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.*.json" CopyToPublishDirectory="Never" />
+  </ItemGroup>
+  
 </Project>
