Atualizar os arquivos de configuração.

--- a/src/WinOpenID/appsettings.Production.json
+++ b/src/WinOpenID/appsettings.Production.json
@@ -1,17 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning"
     }
   },
   "Server": {
     "AllowedHosts": [
       "https://identity.mps.com.br/",
-      "https://carlosbeppler.mps.interno/",
-      "https://localhost/",
-      "https://localhost:",
       "https://jwt.io",
       "https://oidcdebugger.com/debug"
     ],
