Atualizar para o .NET 6.

--- a/src/WinOpenID/WinOpenID.csproj
+++ b/src/WinOpenID/WinOpenID.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="OpenIddict.Server.AspNetCore" Version="3.0.0" />
     <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="3.0.0" />
     <PackageReference Include="OpenIddict.Validation.ServerIntegration" Version="3.0.0" />
-    <PackageReference Include="System.DirectoryServices.AccountManagement" Version="5.0.0" />
+    <PackageReference Include="System.DirectoryServices.AccountManagement" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
