Remover configurações que não se aplicam mais.

--- a/src/WinOpenID/appsettings.Development.json
+++ b/src/WinOpenID/appsettings.Development.json
@@ -8,13 +8,12 @@
   },
   "Server": {
     "AllowedHosts": [
-      "https://identity.mps.com.br/",
-      "https://carlosbeppler.mps.interno/",
+      "https://identity.example.com/",
       "https://localhost/",
       "https://localhost:",
       "https://jwt.io",
       "https://oidcdebugger.com/debug"
     ],
-    "Domain": "mps.interno"
+    "UseDomain": false
   }
 }
