--- a/src/WinOpenID/appsettings.Production.json
+++ b/src/WinOpenID/appsettings.Production.json
@@ -6,10 +6,11 @@
   },
   "Server": {
     "AllowedHosts": [
-      "https://identity.mps.com.br/",
+      "https://identity.example.com/",
       "https://jwt.io",
       "https://oidcdebugger.com/debug"
     ],
-    "Domain": "mps.interno"
+    "Domain": "example.com",
+    "UseDomain": true
   }
 }
