--- a/src/WinOpenID/WinOpenID.csproj
+++ b/src/WinOpenID/WinOpenID.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Negotiate" Version="6.0.7" />
     <PackageReference Include="OpenIddict.Server.AspNetCore" Version="3.1.1" />
     <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="3.1.1" />
     <PackageReference Include="OpenIddict.Validation.ServerIntegration" Version="3.1.1" />
