--- a/src/WinOpenID/appsettings.Production.json
+++ b/src/WinOpenID/appsettings.Production.json
@@ -10,7 +10,6 @@
       "https://jwt.io",
       "https://oidcdebugger.com/debug"
     ],
-    "Domain": "example.com",
-    "UseDomain": true
+    "Domain": "example.com"
   }
 }
